@@ -1,0 +1,3 @@
+* Global defaults, e.g.:
+  ThreadStorm.timeout_method = SystemTimer.method(:timeout)
+  
